--- a/docs/faststore/docs/customization/using-themes/overview.mdx
+++ b/docs/faststore/docs/customization/using-themes/overview.mdx
@@ -13,7 +13,7 @@ In this guide, you'll have an overview of theming in FastStore, explaining the c
 Theming refers to the process of customizing the UI of a project by using CSS stylesheets called themes.
 Themes consist of configurable design tokens that define the look and feel of the UI.
 
-By modifying these design tokens, you can change the colors, typography, spacing, and other visual properties to create a unique look and feel for your store.By default, every FastStore project comes with the [Brandless theme](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure), a basic theme to start your FastStore project.
+By modifying these design tokens, you can change the colors, typography, spacing, and other visual properties to create a unique look and feel for your store. By default, every FastStore project comes with the [Brandless theme](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure), a basic theme to start your FastStore project.
 
 However, you have the option to use one of the [available themes](https://developers.vtex.com/docs/guides/faststore/themes-overview#available-themes) or [create a custom theme](https://developers.vtex.com/docs/guides/faststore/themes-overview#creating-a-custom-theme).
 
@@ -98,8 +98,8 @@ Design tokens follow a specific naming scheme to ensure predictability and cohes
 Additional increments can be added to the token's name, such as hierarchy, nested element, variant, or situation, to differentiate tokens and provide more context.
 
 - **Hierarchy**: Define its tier.
-- **Nested Element**: To sytle elements contained inside the component.
-- **Variant**: What differentiate it from the default.
+- **Nested Element**: To style elements contained inside the component.
+- **Variant**: Characteristics that differentiate it from the default version.
 - **Situation**: When they should be used.
 
 ![Naming scheme 2](https://vtexhelp.vtexassets.com/assets/docs/src/theming-naming-2___4668c9e8da8bec361681d41b6a2e7266.png)
