--- a/docs/faststore/docs/customization/using-themes/mixins-breakpoints.mdx
+++ b/docs/faststore/docs/customization/using-themes/mixins-breakpoints.mdx
@@ -72,9 +72,9 @@ $breakpoints: (
 );
 ```
 
-> ⚠️ You need to declare all the variants (phone, phonemid, tablet, notebook and desktop) even when changing only one of the values.
+> ⚠️ You need to declare all the variants (phone, phonemid, tablet, notebook, and desktop) even when changing only one of the values.
 
-4. Run `yarn dev` in the terminal to start the development server. Your should be able to see the changes.
+4. Run `yarn dev` in the terminal to start the development server. You should be able to see the changes.
 
 ---
 
