--- a/docs/faststore/docs/customization/building-sections/overrides/overview.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/overview.mdx
@@ -1,5 +1,6 @@
-
-# Section override
+---
+title: Section override
+---
 
 Overrides allow you to replace native components within sections with custom ones. This maintains the core functionalities of native components while allowing you to adjust their appearance and behavior to suit the needs of your store.
 
