--- a/docs/faststore/docs/customization/building-sections/overrides/getoverriddensection-function.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/getoverriddensection-function.mdx
@@ -36,7 +36,7 @@ Imagine an Alert section with an icon. You want to make the icon bolder without 
     export default SimpleAlert;
     ```
 
-## Usage
+## Instructions
 
 Here's how you can use `getOverriddenSection` to customize sections within your FastStore project:
 
@@ -59,5 +59,5 @@ Define how to override the native section. This parameter can have the following
 | ---------- | ----------- |
 | `Section`  | React component representing the overridden section.  |
 | `components` | An object containing overrides for specific components within the section. The keys of this object should match the component names used in the section, and the values should be objects defining overrides for those components.  For more details on overrides, refer to [Overriding components props](https://developers.vtex.com/docs/guides/faststore/overrides-component-props) and [Overriding a component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component). |
-| `className`  | Property that behaves similar to [React's `className`](https://react.dev/reference/react-dom/components/common#applying-css-styles).             | 
+| `className`  | Property that behaves similarly to [React's `className`](https://react.dev/reference/react-dom/components/common#applying-css-styles).             | 
 
