--- a/docs/faststore/docs/go-live/overview.mdx
+++ b/docs/faststore/docs/go-live/overview.mdx
@@ -11,12 +11,12 @@ In a headless architecture, an ecommerce website relies on the seamless collabor
 | **Checkout**                | Receives the shopper's information necessary to process an order.                                                                       |
 | **OrderPlaced**             | Handles the processing of customer orders. It displays a successful message right after the checkout process is completed.                                                            |
 | **Login**                   | Handles user login in a store.                                                                                                          |
-| **MyAccount**               | Allows customers to manage their orders and personal data (e.g., profile information, password, addresses, and credit cards) on a single page. |
+| **MyAccount**               | Allows customers to manage their orders and personal data (e.g., profile information, passwords, addresses, and credit cards) on a single page. |
 | **VTEX Intelligent Search** | Provides autocomplete and displays relevant results based on the store catalog.                                                                 |
 
 Therefore, to provide shoppers with a full checkout and post-purchase experience, you, as a developer, must guarantee the integration between your FastStore project and VTEX solutions before going live.
 
-To ensure that you have set up all configurations for your store to run smoothly please consider the following go-live checklist.
+To ensure that you have set up all configurations for your store to run smoothly, please consider the following go-live checklist.
 
 >ℹ️ To get a complete overview of the go-live process for any VTEX store, see this [Go-live guide](https://help.vtex.com/tracks/go-live-your-store--4Ns5FxIiksmjsdX2yOTduM/1iP90RcJvlrfQhnlxM54wo).
 
@@ -24,7 +24,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 
 ## Go-live checklist
 
-### Storefront developement
+### Storefront development
 
 <ul class="nx-section-checklist">
 <li>
@@ -84,7 +84,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 <tbody>
 <tr>
   <td>Agency</td>
-  <td><a href="/docs/getting-started/2-setting-up-the-project">Setting up the project</a></td>
+  <td><a href="https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project">Setting up the project</a></td>
 </tr>
 </tbody>
 </table>
