--- a/docs/faststore/docs/go-live/before-you-begin.mdx
+++ b/docs/faststore/docs/go-live/before-you-begin.mdx
@@ -1,14 +1,14 @@
 ---
-title: ' Before you begin'
+title: 'Before you begin'
 ---
 
-Before each production go-live, contact the FastStore team at least 4 weeks before the date and make sure that the following was complete:
+Before each production goes live, contact the FastStore team at least four weeks before the date and make sure that the following is complete:
 
 <Steps>
 
 ### Account Edition
 
-Your account edition is set to `vtex.edition-store@5.x Edition` app in your master workspace.
+Your account edition is set to `vtex.edition-store@5.x` Edition app in your master workspace.
 
 > ⚠️ If you do not have the appropriate Edition app installed, [open a support ticket](https://help.vtex.com/support) requesting the installation of the `vtex.edition-store@5.x Edition` app in your master workspace.
 
