--- a/docs/faststore/docs/troubleshooting/analytics-and-partytown.mdx
+++ b/docs/faststore/docs/troubleshooting/analytics-and-partytown.mdx
@@ -4,13 +4,13 @@ title: "Troubleshooting analytics and Partytown"
 
 The overwhelming majority of ecommerce websites use at least one analytics provider to collect metrics and track user behaviors. These analytics providers usually work by downloading and executing heavy javascript bundles in the browser, which may degrade website performance.
 
-[Partytown](https://partytown.builder.io/) is a tool that can help reduce this damage by moving 3rd party scripts execution to a webworker. Since Partytown is a beta solution and the 3rd party scripts run on a different environment than what they were built for, some errors are expected to occur. The following topics bring relevant information for debugging Partytown and analytics in general.
+[Partytown](https://partytown.builder.io/) is a tool that can help reduce this damage by moving third-party scripts' execution to a web worker. Since Partytown is a beta solution and the third-party scripts run in a different environment than what they were built for, some errors are expected to occur. The following topics bring relevant information for debugging Partytown and analytics in general.
 
 ---
 
 ## Google Tag Assistant is not working
 
-Debugging Google Tag Manager (GTM) and Google Analytics (GA) using Google Tag Assistant is, as of now, not possible if you're using Partytown. Thus, to debug your tags and GA behavior on your website requires turning partytown down. We recognize this is not ideal, after all, you'll not be debugging in the same environment your users will browse. If you're using Google Analytics 4 (recommended), you can mitigate this effect by debugging the events inside GA: check [Google official documentation](https://support.google.com/analytics/answer/7201382?hl=pt-BR#zippy=%2Cgerenciador-de-tags-do-google-sites) on how to enable it.
+Debugging Google Tag Manager (GTM) and Google Analytics (GA) using Google Tag Assistant is, as of now, not possible if you're using Partytown. Thus, debugging your tags and GA behavior on your website requires turning partytown down. We recognize this is not ideal; after all, you'll not be debugging in the same environment your users will browse. If you're using Google Analytics 4 (recommended), you can mitigate this effect by debugging the events inside GA: check [Google official documentation](https://support.google.com/analytics/answer/7201382?hl=pt-BR#zippy=%2Cgerenciador-de-tags-do-google-sites) on how to enable it.
 
 To help you debug GTM and GA using Google Tag Assistant, we've included a switch in the form of a query string in our starters. When this query string is included in the URL, it is guaranteed that partytown will not be enabled for GTM. You can enable this query string to be included automatically when previewing a GTM container (image below). Check the next topic for more details on this query string.
 
@@ -20,7 +20,7 @@ To help you debug GTM and GA using Google Tag Assistant, we've included a switch
 
 ## `gtm_debug=` query string
 
-Whenever the `gtm_debug=` query string is included in the URL, the GTM scripts (and all scripts/tags it injects) run outside Partytown. That's a great way of knowing if the error you're experiencing happens even if it runs without Partytown. You can navigate through pages and GTM will still run without Partytown, as long as you're using the Single Page Application (SPA) navigation, and not an absolute link to other page.
+Whenever the `gtm_debug=` query string is included in the URL, the GTM scripts (and all scripts/tags it injects) run outside Partytown. That's a great way of knowing if the error you're experiencing happens even if it runs without Partytown. You can navigate through pages, and GTM will still run without Partytown, as long as you're using the Single Page Application (SPA) navigation and not an absolute link to another page.
 
 ---
 
@@ -38,7 +38,7 @@ dataLayer.push = (data) => {
 }
 ```
 
-After you run this, every event added to the `dataLayer` will be logged in the browser's console, and will also be available in the `window.dataLayerHistory` variable, so you can check all the events more easely. You can navigate through pages and the events will still be logged and sent as long as you're using the Single Page Application (SPA) navigation, and not an absolute link to other page.
+After you run this, every event added to the `dataLayer` will be logged in the browser's console and will also be available in the `window.dataLayerHistory` variable so you can check all the events more easily. You can navigate through pages, and the events will still be logged and sent as long as you're using the Single Page Application (SPA) navigation, and not an absolute link to another page.
 
 ---
 
