--- a/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
@@ -250,7 +250,7 @@ This schema Adds the new `Product Details with custom button` section to the Hea
 
 ### Step 4 - Visualizing the component on the page locally
 
-To see your changes locally, you need to set the Headless CMS preview to the development mode. For more information, refer to the [Previewing Headless CMS changes in development mode](https://developers.vtex.com/docs/guides/faststore/headless-cms-previewing-changes-in-development-mode) guide.
+To see your changes locally, you must set the Headless CMS preview to the development mode. For more information, refer to the [Previewing Headless CMS changes in development mode](https://developers.vtex.com/docs/guides/faststore/headless-cms-previewing-changes-in-development-mode) guide.
 
 Once you have set the preview for development mode, you should see your new Buy Button in a Product Details Page (PDP):
 
