update docs name

--- a/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Setting up the store code for Dynamic Content'
+title: 'Step 1 - Setting up the store code for Dynamic Content'
 ---
 
 ## Step 1 - Mapping pages and data-fetching functions
