--- a/docs/faststore/docs/customization/dynamic-content/step-2-handling-the-dynamic-content-in-custom-sections.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/step-2-handling-the-dynamic-content-in-custom-sections.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Consuming the Dynamic Content in custom sections'
+title: 'Step 2 - Consuming the Dynamic Content in custom sections'
 ---
 
 After [mapping pages and data-fetching functions](https://developers.vtex.com/docs/guides/faststore/dynamic-content-setting-up-the-store-code-for-dynamic-content#step-1-mapping-pages-and-data-fetching-functions) and choosing one of the methods for [creating Dynamic Content via API fetching](https://developers.vtex.com/docs/guides/faststore/dynamic-content-setting-up-the-store-code-for-dynamic-content#step-2-creating-dynamic-content-via-api-fetching), use the data to render it in a store section. In this step, we will create a new Hero section, placed on a landing page, to render the image from the data.
