--- a/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
+++ b/docs/faststore/docs/customization/dynamic-content/step-1-setting-up-the-store-code-for-dynamic-content.mdx
@@ -1,8 +1,12 @@
 ---
-title: 'Step 1 - Setting up the store code for Dynamic Content'
+title: "Step 1 - Setting up the store code for Dynamic Content"
 ---
 
-## Step 1 - Mapping pages and data-fetching functions
+Now that you have an overview of the [Dynamic Content feature](https://developers.vtex.com/docs/guides/faststore/dynamic-content-overview), let's start the feature implementation by setting up your store code.
+
+## Instructions
+
+## 1. Mapping pages and data-fetching functions
 
 Create a file to map the home and landing Pages to their data-fetching functions. This file maps the home or the landing pages slug to a respective data fetch function, which will fetch, handle, and return the desired server-side data to display the content in a store section. For example, you can add an image from a third-party source in a Hero component.
 
@@ -11,31 +15,33 @@ Create a file to map the home and landing Pages to their data-fetching functions
 3. Inside the `dynamicContent` folder, create the `index.ts` file.
 4. Inside `index.ts`, add the following code:
 
-    ```ts src/dynamicContent/index.ts
-    const fetchDataMyLandingPage = async () => {
-        const response = await fetch("https://fakestoreapi.com/products").then((res) => res.json());
+   ```ts src/dynamicContent/index.ts
+   const fetchDataMyLandingPage = async () => {
+     const response = await fetch("https://fakestoreapi.com/products").then(
+       (res) => res.json()
+     );
 
-        return { data: response };
-    };
+     return { data: response };
+   };
 
-    const dynamicContent = {
-        "my-landing-page": fetchDataMyLandingPage,
-    }
+   const dynamicContent = {
+     "my-landing-page": fetchDataMyLandingPage,
+   };
 
-    export default dynamicContent;
+   export default dynamicContent;
+   ```
 
-    ```
-
-    - First, we define the `fetchDataMyLandingPage`, which calls for an external API (`https://fakestoreapi.com/products`) to fetch the product information.
-    - The `data` object returns the information.
-    - The `dynamicContent` relates the slug that we will define in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/dynamic-content-consuming-the-dynamic-content-in-custom-sections).
+   - First, we define the `fetchDataMyLandingPage`, which calls for an external API (`https://fakestoreapi.com/products`) to fetch the product information.
+   - The `data` object returns the information.
+   - The `dynamicContent` relates the slug that we will define in the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/dynamic-content-consuming-the-dynamic-content-in-custom-sections).
 
 Let’s dive deep into `dynamicContent` and the pages allowed to be customized with the Dynamic Content feature: home and landing pages:
 
 <details>
 <summary><b><code>dynamicContent</code></b></summary>
 
-The `dynamicContent` object stores key-value pairs: 
+The `dynamicContent` object stores key-value pairs:
+
 - The key represents the page slug (e.g., `home` for the Home page and `my-landing-page` for a specific Landing page).
 - The value is the corresponding data-fetching function responsible for fetching data for that page. In this example, `fetchDataMyLandingPage`.
 
@@ -59,12 +65,12 @@ Landing pages can represent different pages and URLs. To identify the landing pa
 
 Now that we've established the file for mapping pages to data fetching functions let's define those functions to customize your component using third-party sources.
 
-## Step 2 - Creating Dynamic Content via API fetching
+## 2. Creating Dynamic Content via API fetching
 
-After [mapping pages and data-fetching functions](#step-1-mapping-pages-and-data-fetching-functions), you need to define these functions and create the logic to fetch the data from other data sources. There are two ways for fetching data:
+After [mapping pages and data-fetching functions](#1-mapping-pages-and-data-fetching-functions), you need to define these functions and create the logic to fetch the data from other data sources. There are two ways for fetching data:
 
 - [Using API extensions](#using-api-extensions): Leverage the existing [API Extension](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview) feature to fetch the data.
-- [Using fetch API or any requesting library](#using-fetch-api-or-any-request-library): Request Fetch API or any HTTP library to directly fetch the data ([Axios](https://axios-http.com/docs/intro), fetch, etc). 
+- [Using fetch API or any requesting library](#using-fetch-api-or-any-request-library): Request Fetch API or any HTTP library to directly fetch the data ([Axios](https://axios-http.com/docs/intro), fetch, etc).
 
 ### Using API Extensions
 
@@ -73,117 +79,115 @@ After [mapping pages and data-fetching functions](#step-1-mapping-pages-and-data
 3. Create two other folders inside the `thirdParty`: `resolvers` and `typeDefs`.
 4. Inside `typeDefs` create the `extra.graphql` file.
 5. Add the following code:
-	
-    ```graphql 
-    type Rating {
-    rate: String
-    count: Int
-    }
 
-    type ProductsExtraData {
-    id: Int
-    title: String
-    price: Float
-    description: String
-    category: String
-    image: String
-    rating: Rating
-    }
+   ```extra.graphql
+   type Rating {
+     rate: String
+     count: Int
+   }
 
-    type ExtraData {
-    """
-    Data customizing ExtraData
-    """
-    data: [ProductsExtraData]
-    customFieldFromRoot: String
-    customField: String
-    }
+   type ProductsExtraData {
+     id: Int
+     title: String
+     price: Float
+     description: String
+     category: String
+     image: String
+     rating: Rating
+   }
 
-    type NamedExtraData {
-    """
-    Data customizing NamedExtraData
-    """
-    data: String!
-    }
+   type ExtraData {
+     """
+     Data customizing ExtraData
+     """
+     data: [ProductsExtraData]
+     customFieldFromRoot: String
+     customField: String
+   }
 
-    type Query {
-    extraData: ExtraData
-    namedExtraData(name: String!): NamedExtraData
-    }
+   type NamedExtraData {
+     """
+     Data customizing NamedExtraData
+     """
+     data: String!
+   }
 
-    ```
+   type Query {
+     extraData: ExtraData
+     namedExtraData(name: String!): NamedExtraData
+   }
+   ```
 
-    - The field `ProductsExtraData` represents product data, with fields for id, title, price, description, category, image, and rating.
+   - The field `ProductsExtraData` represents product data, with fields for id, title, price, description, category, image, and rating.
 
-    - The field `ExtraData` combines a list of `ProductsExtraData` and additional custom fields.
+   - The field `ExtraData` combines a list of `ProductsExtraData` and additional custom fields.
 
-    - The field `Query` defines queries for fetching extraData and namedExtraData.
+   - The field `Query` defines queries for fetching extraData and namedExtraData.
 
-Now, create the logic to fill these fields:
+   Now, create the logic to fill these fields:
 
-6. Create a file called `query` inside the' resolvers' folder.
+6. Create a file called `query.ts` inside the' resolvers' folder.
 7. Add the following code to it:
 
-    ```src/graphql/thirdParty/resolvers/query.ts
+   ```query.ts
 
-    export type ProductsExtraData = {
-    id: number;
-    title: string;
-    price: number;
-    description: string;
-    category: string;
-    image: string;
-    rating: {
-        rate: number;
-        count: number;
-    };
-    };
+   export type ProductsExtraData = {
+   id: number;
+   title: string;
+   price: number;
+   description: string;
+   category: string;
+   image: string;
+   rating: {
+       rate: number;
+       count: number;
+   };
+   };
 
-    async function getProductsFromAPI() {
-    const response = await fetch("https://fakestoreapi.com/products");
-    return response.json();
-    }
+   async function getProductsFromAPI() {
+   const response = await fetch("https://fakestoreapi.com/products");
+   return response.json();
+   }
 
-    export const Query = {
-    extraData: async (): Promise<{ data: ProductsExtraData[] }> => {
-        const products = await getProductsFromAPI();
-        return { data: products };
-    },
-    namedExtraData: (_: unknown, { name }: { name: string }) => ({
-        data: `Named extra data: ${name}`,
-    }),
-    };
+   export const Query = {
+   extraData: async (): Promise<{ data: ProductsExtraData[] }> => {
+       const products = await getProductsFromAPI();
+       return { data: products };
+   },
+   namedExtraData: (_: unknown, { name }: { name: string }) => ({
+       data: `Named extra data: ${name}`,
+   }),
+   };
+   ```
 
-    ```
-
-    - `getProductsFromAPI` fetches product data from an external API.
-    - `extraData` resolves the `extraData` query by fetching and returning products.
-    - `namedExtraData` resolves the `namedExtraData` query by returning a custom message.
+   - `getProductsFromAPI` fetches product data from an external API.
+   - `extraData` resolves the `extraData` query by fetching and returning products.
+   - `namedExtraData` resolves the `namedExtraData` query by returning a custom message.
 
 8. Create a file called `extra.ts` inside the' resolvers' folder.
 9. Add the following code to it:
 
-    ```
-    import { ExtraDataRoot } from "./query";
+   ```extra.ts
+   import { ExtraDataRoot } from "./query";
 
-    export const ExtraData = {
-    data: (root: ExtraDataRoot) => root.data,
-    customFieldFromRoot: (root: ExtraDataRoot) => root?.data?.[0]?.image ?? "",
-    customField: async (_: ExtraDataRoot) => {
-        const res = await fetch(
-        "https://fakestoreapi.com/products/category/jewelery"
-        );
-        const customField = await res.json();
-        return (customField?.[0]?.title as string) ?? "";
-    },
-    };
-    ```
+   export const ExtraData = {
+   data: (root: ExtraDataRoot) => root.data,
+   customFieldFromRoot: (root: ExtraDataRoot) => root?.data?.[0]?.image ?? "",
+   customField: async (_: ExtraDataRoot) => {
+       const res = await fetch(
+       "https://fakestoreapi.com/products/category/jewelery"
+       );
+       const customField = await res.json();
+       return (customField?.[0]?.title as string) ?? "";
+   },
+   };
+   ```
 
-    - The `Query` function returns the API data in the field `extraData` through a request on an external API.
+   - The `Query` function returns the API data in the field `extraData` through a request on an external API.
 
 10. Inside the `resolvers` folder, create a file called `index.ts` and add the following code:
 
-    ```
+    ```index.ts
     import { ExtraData } from "./extraData";
     import { Query } from "./query";
 
@@ -197,7 +201,7 @@ Now, create the logic to fill these fields:
 
 11. Combine your resolvers and queries into the store's dynamic content in the `index.tsx` file inside the `dynamicContent` folder.
 
-    ```src/dynamicContent/index.ts mark=1:33
+    ```index.ts mark=1:33
     import { gql } from "@faststore/core/api";
     import { execute_unstable as execute } from "@faststore/core/experimental";
 
@@ -238,24 +242,23 @@ Now, create the logic to fill these fields:
     };
 
     export default dynamicContent;
-
     ```
 
     - Imports:
-        - Import `gql` for defining GraphQL queries.
-        - Import execute_unstable for running server-side GraphQL queries.
+      - Import `gql` for defining GraphQL queries.
+      - Import execute_unstable for running server-side GraphQL queries.
     - `query` Defining the GraphQL Query:
-        - Query named `ServerDynamicContent` accepts a `name` parameter.
-        - Fetches fields under `extraData` including nested `rating`.
-        - Fetches `namedExtraData` based on the name parameter.
-    - `fetchDataUsingApiExtension`: 
-        - It executes to run the GraphQL query with specified variables.
-        - Returns the result data or logs and returns an error if it fails.
+      - Query named `ServerDynamicContent` accepts a `name` parameter.
+      - Fetches fields under `extraData` including nested `rating`.
+      - Fetches `namedExtraData` based on the name parameter.
+    - `fetchDataUsingApiExtension`:
+      - It executes to run the GraphQL query with specified variables.
+      - Returns the result data or logs and returns an error if it fails.
     - `dynamicContent`:
-        - Maps the slug `my-landing-page-api-extensions` to the `fetchDataUsingApiExtension function`.
-        - This slug identifies in the code which content we want to bring to the page.
+      - Maps the slug `my-landing-page-api-extensions` to the `fetchDataUsingApiExtension function`.
+      - This slug identifies in the code which content we want to bring to the page.
 
-You can render this data in your store sections once you've set up your dynamic content fetching functions and mappings. See the [Rendering the data in custom sections](#rendering-the-data-in-custom-sections) guide for more information on using this data in a new section.
+You can render this data in your store sections once you've set up your dynamic content fetching functions and mappings. See the [Step 2 - Handling Dynamic Content within custom sections](https://developers.vtex.com/docs/guides/faststore/dynamic-content-step-2-handling-the-dynamic-content-in-custom-sections) guide for more information on using this data in a new section.
 
 ### Using Fetch API or any request library
 
@@ -263,85 +266,83 @@ You can render this data in your store sections once you've set up your dynamic 
 
 You can use [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) to directly fetch data from an endpoint.
 
-    ``` src/dynamicContent/index.ts
+```src/dynamicContent/index.ts
 
-    async function fetchDataMyLandingPage() {
-    const response = await fetch("https://fakestoreapi.com/products");
-    const data = await response.json();
-    return { data };
-    }
+async function fetchDataMyLandingPage() {
+const response = await fetch("https://fakestoreapi.com/products");
+const data = await response.json();
+return { data };
+}
 
-    // Mapping slug to the data-fetching function
-    const dynamicContent = {
-    "my-landing-page": fetchDataMyLandingPage,
-    };
+// Mapping slug to the data-fetching function
+const dynamicContent = {
+"my-landing-page": fetchDataMyLandingPage,
+};
 
-    export default dynamicContent;
-    ```
+export default dynamicContent;
+```
 
-    - `fetchDataMyLandingPage`:
-        - Fetches data from https://fakestoreapi.com/products.
-        - Returns the fetched data as an object with a data key.
-
+- `fetchDataMyLandingPage`:
+  - Fetches data from https://fakestoreapi.com/products.
+  - Returns the fetched data as an object with a data key.
 
 #### Multiple Requests Example
 
 Use `Promise.all` to fetch data from multiple endpoints concurrently.
 
-    ```src/dynamicContent/index.ts
-    async function fetchDataHomepage() {
-    try {
-        const [apiData1, apiData2] = await Promise.all([
-        fetch("https://fakestoreapi.com/products/1").then(res => res.json()),
-        fetch("https://fakestoreapi.com/products/2").then(res => res.json())
-        ]);
+```src/dynamicContent/index.ts
+async function fetchDataHomepage() {
+try {
+    const [apiData1, apiData2] = await Promise.all([
+    fetch("https://fakestoreapi.com/products/1").then(res => res.json()),
+    fetch("https://fakestoreapi.com/products/2").then(res => res.json())
+    ]);
 
-        return {
-        data: {
-            product1: apiData1,
-            product2: apiData2,
-        },
-        };
-    } catch (error) {
-        console.error("Error fetching data from APIs:", error);
-        return { data: null, error: "Error fetching data from APIs" };
-    }
-    }
-
-    // Mapping slugs to their respective data-fetching functions
-    const dynamicContent = {
-    home: fetchDataHomepage,
-    "my-landing-page": fetchDataMyLandingPage,
+    return {
+    data: {
+        product1: apiData1,
+        product2: apiData2,
+    },
     };
+} catch (error) {
+    return { data: null, error: "Error fetching data from APIs" };
+}
+}
 
-    export default dynamicContent;
-    ```
-    - `fetchDataHomepage`:
-        - Concurrently fetches data from two endpoints.
-        - Returns the data from both endpoints in a single data object with separate keys for each product.
+// Mapping slugs to their respective data-fetching functions
+const dynamicContent = {
+home: fetchDataHomepage,
+"my-landing-page": fetchDataMyLandingPage,
+};
 
+export default dynamicContent;
+```
 
-Once you've set up your dynamic content fetching functions and mappings, you can render this data in your store sections. For more information on using this data in a new section, see the [Rendering the data in custom sections](#rendering-the-data-in-custom-sections) guide.
+- `fetchDataHomepage`:
+  - Concurrently fetches data from two endpoints.
+  - Returns the data from both endpoints in a single data object with separate keys for each product.
+
+Once you've set up your dynamic content fetching functions and mappings, you can render this data in your store sections. For more information on using this data in a new section, see the [Step 2 - Handling Dynamic Content within custom sections](https://developers.vtex.com/docs/guides/faststore/dynamic-content-step-2-handling-the-dynamic-content-in-custom-sections) guide.
 
 ### Returning the data Object
 
-For both approaches, [data fetching using Fetch API] or Data Fetching using API Extensions feature, the data-fetching function must return an object with data as the root key in the following format:
+For both approaches, [data fetching using Fetch API](#using-fetch-api-or-any-request-library) or [Data Fetching using API extensions](#using-api-extensions), the data-fetching function must return an object with data as the root key in the following format:
 
-    ```ts
-    return {
-    data: {
-        // data fetched
-    },
-    };
-    ```
+```ts
+return {
+data: {
+    // data fetched
+},
+};
+```
 
 The data object can contain other objects inside:
 
-    ```ts
-    return {
-    data: {
-        key1: result1,
-        key2: result2,
-    },
-    };
-    ```
+```ts
+return {
+data: {
+    key1: result1,
+    key2: result2,
+},
+    ;
+```
