update "queries" links and change filename

--- a/docs/faststore/docs/faststore-api/schema/queries.mdx
+++ b/docs/faststore/docs/faststore-api/schema/queries.mdx
@@ -37,7 +37,7 @@ An array of selected search facets.
 </td>
 <tr>
 <td colspan="2" valign="top"><strong>allProducts</strong></td>
-<td valign="top"><a href="#storeproductconnection">StoreProductConnection</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproductconnection">StoreProductConnection</a>!</td>
 <td>
 
 Returns information about all products.
@@ -46,7 +46,7 @@ Returns information about all products.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">first</td>
-<td valign="top"><a href="#int">Int</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a>!</td>
 <td>
 
 Product pagination argument, indicating how many items should be returned from the complete result list.
@@ -55,7 +55,7 @@ Product pagination argument, indicating how many items should be returned from t
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">after</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Product pagination argument, indicating the cursor corresponding with the item after which the items should be fetched.
@@ -72,7 +72,7 @@ Product pagination argument, indicating the cursor corresponding with the item a
 <tr>
 <tr>
 <td colspan="2" valign="top"><strong>collection</strong></td>
-<td valign="top"><a href="#storecollection">StoreCollection</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storecollection">StoreCollection</a>!</td>
 <td>
 
 Returns the details of a collection based on the collection slug.
@@ -81,7 +81,7 @@ Returns the details of a collection based on the collection slug.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">slug</td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Collection slug.
@@ -90,7 +90,7 @@ Collection slug.
 </tr>
 <tr>
 <td colspan="2" valign="top"><strong>allCollections</strong></td>
-<td valign="top"><a href="#storecollectionconnection">StoreCollectionConnection</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storecollectionconnection">StoreCollectionConnection</a>!</td>
 <td>
 
 Returns information about all collections.
@@ -99,7 +99,7 @@ Returns information about all collections.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">first</td>
-<td valign="top"><a href="#int">Int</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a>!</td>
 <td>
 
 Collection pagination argument, indicating how many items should be returned from the complete result list.
@@ -108,7 +108,7 @@ Collection pagination argument, indicating how many items should be returned fro
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">after</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Collection pagination argument, indicating the cursor corresponding with the item after which the items should be fetched.
@@ -125,7 +125,7 @@ Collection pagination argument, indicating the cursor corresponding with the ite
 <thead>
 <tr>
 <td colspan="2" valign="top"><strong>search</strong></td>
-<td valign="top"><a href="#storesearchresult">StoreSearchResult</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storesearchresult">StoreSearchResult</a>!</td>
 <td>
 
 Returns the result of a product, facet, or suggestion search.
@@ -134,7 +134,7 @@ Returns the result of a product, facet, or suggestion search.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">first</td>
-<td valign="top"><a href="#int">Int</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#int">Int</a>!</td>
 <td>
 
 Search pagination argument, indicating how many results should be returned from the complete result list.
@@ -143,7 +143,7 @@ Search pagination argument, indicating how many results should be returned from 
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">after</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Search pagination argument, indicating the cursor corresponding with the item after which the results should be fetched.
@@ -152,7 +152,7 @@ Search pagination argument, indicating the cursor corresponding with the item af
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">sort</td>
-<td valign="top"><a href="#storesort">StoreSort</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-enums#storesort">StoreSort</a></td>
 <td>
 
 Search results sorting mode.
@@ -161,7 +161,7 @@ Search results sorting mode.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">term</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Search term.
@@ -170,7 +170,7 @@ Search term.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">selectedFacets</td>
-<td valign="top">[<a href="#istoreselectedfacet">IStoreSelectedFacet</a>!]</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreselectedfacet">IStoreSelectedFacet</a>!]</td>
 <td>
 
 Array of selected search facets.
@@ -180,7 +180,7 @@ Array of selected search facets.
 
 <tr>
 <td colspan="2" valign="top"><strong>redirect</strong></td>
-<td valign="top"><a href="#storeredirect">StoreRedirect</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storeredirect">StoreRedirect</a></td>
 <td>
 
 Returns if there's a redirect for a search.
@@ -189,7 +189,7 @@ Returns if there's a redirect for a search.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">term</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Search term.
@@ -198,7 +198,7 @@ Search term.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">selectedFacets</td>
-<td valign="top">[<a href="#istoreselectedfacet">IStoreSelectedFacet</a>!]</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreselectedfacet">IStoreSelectedFacet</a>!]</td>
 <td>
 
 Array of selected search facets.
@@ -214,7 +214,7 @@ Array of selected search facets.
 <thead>
 <tr>
 <td colspan="2" valign="top"><strong>shipping</strong></td>
-<td valign="top"><a href="#shippingdata">ShippingData</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#shippingdata">ShippingData</a></td>
 <td>
 
 Returns information about shipping simulation.
@@ -223,7 +223,7 @@ Returns information about shipping simulation.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">items</td>
-<td valign="top">[<a href="#ishippingitem">IShippingItem</a>!]!</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#ishippingitem">IShippingItem</a>!]!</td>
 <td>
 
 Shipping Simulation item input.
@@ -232,7 +232,7 @@ Shipping Simulation item input.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">postalCode</td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Postal code to freight calculator.
@@ -241,7 +241,7 @@ Postal code to freight calculator.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">country</td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Country of postal code.
@@ -257,7 +257,7 @@ Country of postal code.
 <thead>
 <tr>
 <td colspan="2" valign="top"><strong>sellers</strong></td>
-<td valign="top"><a href="#sellersdata">SellersData</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#sellersdata">SellersData</a></td>
 <td>
 
 Returns a list of sellers available for a specific localization.
@@ -266,7 +266,7 @@ Returns a list of sellers available for a specific localization.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">postalCode</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Postal code input to calculate sellers.
@@ -275,7 +275,7 @@ Postal code input to calculate sellers.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">geoCoordinates</td>
-<td valign="top"><a href="#igeocoordinates">IGeoCoordinates</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#igeocoordinates">IGeoCoordinates</a></td>
 <td>
 
 Geocoordinates input to calculate sellers.
@@ -284,7 +284,7 @@ Geocoordinates input to calculate sellers.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">country</td>
-<td valign="top"><a href="#string">String</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a>!</td>
 <td>
 
 Country of localization.
@@ -293,7 +293,7 @@ Country of localization.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">salesChannel</td>
-<td valign="top"><a href="#string">String</a></td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-scalars#string">String</a></td>
 <td>
 
 Sales channel of the navigation.
